--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "homepage": "https://github.com/gsg0222/for-study#readme",
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "autoprefixer": "^9.7.5",
+    "@babel/preset-env": "^7.9.5",
+    "autoprefixer": "^9.7.6",
     "browser-sync": "^2.26.7",
     "css-declaration-sorter": "^5.1.2",
     "gulp": "^4.0.2",
@@ -32,10 +32,13 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-uglify": "^3.0.2",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0"
+  },
+  "dependencies": {
+    "npm-check-updates": "^4.1.2"
   }
 }
